force-app/main/default/objects/OrgValidationRule__c/OrgValidationRule__c.object-meta.xml
<CustomObject>
    <description>Validation Rule information retrieved from polling for search functionality</description>
    <label>OrgValidationRule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OrgValidationRules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>