force-app/main/default/objects/OrgValidationRule__c/fields/ErrorDisplayField__c.field-meta.xml
<CustomField>
    <fullName>ErrorDisplayField__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Where does the error message display</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ErrorDisplayField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>