force-app/main/default/objects/OrgValidationRule__c/fields/ValidationRuleCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ValidationRuleCreatedDate__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Date this ValidationRule was created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ValidationRuleCreatedDate</label>
    <type>DateTime</type>
</CustomField>