force-app/main/default/objects/OrgValidationRule__c/fields/ValidationRuleLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>ValidationRuleLastModifiedBy__c</fullName>
    <complianceGroup>PII:GDPR</complianceGroup>
    <description>Org User who Modified the ValidationRule</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ValidationRuleLastModifiedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>