force-app/main/default/objects/OrgValidationRule__c/fields/ValidationRuleName__c.field-meta.xml
<CustomField>
    <fullName>ValidationRuleName__c</fullName>
    <complianceGroup>Normal</complianceGroup>
    <description>Name of the ValidationRule</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ValidationRuleName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>